Work around `sealed` still not having a `TokenKind`.
It still doesn't. :/

PiperOrigin-RevId: 850078693